fixed portfolio menu and gallery overlap
beine .sidebar o .portfolio yadet rafte bood , bezari!

--- a/main.css
+++ b/main.css
@@ -2,42 +2,42 @@
 /* Generated by the CoffeeCup HTML Editor - www.coffeecup.com */
 html, body
 {
-    height: 100%;
-    font-family:"Times New Roman", Times, serif;
-    margin: 0;
-    padding: 0;
+  height: 100%;
+  font-family:"Times New Roman", Times, serif;
+  margin: 0;
+  padding: 0;
 }
 body {
 	margin: 0;
 }
 
 a {
-    text-decoration:none;
-    color:#4D4D4D;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    -ms-transition: 0.5s;
-    transition: 0.5s;
-  }
-  
- 
-a:hover {
-   color:#FFFFFF;
+  text-decoration:none;
+  color:#4D4D4D;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
 
- }
+
+a:hover {
+ color:#FFFFFF;
+
+}
 
 
 #wrapper {
 	min-height:100%;
 	position:relative;
-    background-image:url(images/crossword.png);
-    background-repeat:repeat-x repeat-y;
+  background-image:url(images/crossword.png);
+  background-repeat:repeat-x repeat-y;
 }
 
 ul {
 
--webkit-padding-start: 10px;
+  -webkit-padding-start: 10px;
 }
 
 
@@ -48,8 +48,8 @@ ul {
 #header {
 	width:100%;
 	background-image:url(images/topheader.png);
-   	background-repeat: repeat-x;
-	padding-top: 50px;
+  background-repeat: repeat-x;
+  padding-top: 50px;
 } 
 
 .menu-container {
@@ -59,10 +59,10 @@ ul {
 
 .logo-wrap {
 	padding: 0px;
-    padding-top:30px;
-    margin:50px;
-	display: table-cell;
-	text-align: right;
+  padding-top:30px;
+  margin:50px;
+  display: table-cell;
+  text-align: right;
 }
 
 .logo-img {
@@ -72,19 +72,19 @@ ul {
 .menu {
 	display: table-cell;
 	vertical-align: middle;
-    padding-top:13px;
-    padding-left:138px;
-    
-   
+  padding-top:13px;
+  padding-left:138px;
+  
+  
 }
 .menu li {
 	display: inline;
 	padding: 24px;
 	font-size: 19px;
-    color:#4D4D4D;
-    font-family:Oswald,Tahoma,Helvetica,sans-serif;
-    
-    
+  color:#4D4D4D;
+  font-family:Oswald,Tahoma,Helvetica,sans-serif;
+  
+  
 }
 .menu-bar {
 	display: table;
@@ -101,7 +101,7 @@ ul {
 .footer-menu {
 	text-align: center;
 	margin-top: 30px;
-  	padding-left: 0;
+ padding-left: 0;
 }
 
 /*body*/
@@ -110,23 +110,23 @@ ul {
 #body {
 	display: table;
 	width: 825px;
-   
+ 
 	margin: 0 auto;
 	padding-top: 50px;
 	padding-bottom:100px; 
 	min-height: 100%;
-    
+  
 }
 
 /*homepage*/
-  
+
 .body-img2{
  
 	width:800px;
 	height:533px;
 	background: url(images/myphoto2.jpg) no-repeat;
-    border: 5px solid #E6E6E6;
-     
+  border: 5px solid #E6E6E6;
+  
 }
 
 .text{
@@ -134,7 +134,7 @@ ul {
 	height:480px;
 	background:#FFF;
 	opacity:0;
-    
+  
 }
 
 .body-img2:hover .text
@@ -145,21 +145,21 @@ ul {
 	font-size:30px;
 	font-weight:300;
 	font-family:Oswald,Tahoma,Helvetica,sans-serif;
-    padding:30px;
+  padding:30px;
   
 }
 
 #body-content {
-width:840px;
- }
+  width:840px;
+}
 
 /*aboutpage*/
 
 .body-img, .body-text {
 	display: table-cell;
 	vertical-align: top;
-    position: relative; 
-        
+  position: relative; 
+  
 }
 .body-text p {
 	margin-top: 0;
@@ -170,22 +170,22 @@ width:840px;
 	font-size: 30px;
 	text-align: left;
 	padding-bottom: 30px;
-    padding-top:10px;
-    color:#4D4D4D;
-    font-family:OswaldLight,"Trebuchet MS",Tahoma,Helvetica,sans-serif;
+  padding-top:10px;
+  color:#4D4D4D;
+  font-family:OswaldLight,"Trebuchet MS",Tahoma,Helvetica,sans-serif;
 }
 
 h2 { 
-    position:relative;
+  position:relative;
   
 }
 
 
 .body-text {
 	padding-left: 78px;
-    font-family:georgia;
-    color: #4D4D4D;
-    text-align:justify;
+  font-family:georgia;
+  color: #4D4D4D;
+  text-align:justify;
 }
 
 .body-text-header {
@@ -195,14 +195,14 @@ h2 {
 
 .body-img {
 	padding-right: 30px;
-    padding-left:0px;
-    
+  padding-left:0px;
+  
 }
 
 .body-img img {
 	height: 180px;
 	width: 230px;
-    
+  
 }
 
 .container {
@@ -214,85 +214,83 @@ h2 {
 /*portfoliopage*/
 
 .body-content {
-    display: table;
-	width: 840px;
- }
+  display: table;
+  width: 840px;
+}
+
+.sidebar, .portfolio {
+ display: table-cell;
  
- .sidebar .portfolio {
-   display:table-cell;
-   
 
-    }
- .portfolio {
+}
+.portfolio {
+  padding-left:30px;
+}
 
-padding-left:300px;
-
- }
- 
- .example-image {
+.example-image {
  padding:3px;
  width:60px;
  height:50px;
  
-  }
+}
 
 .sidebar{
-padding-left:15px;
-width:200px;
-position:absolute;
+  padding-left:15px;
+  width:200px;
+  /*position:absolute;*/
 
- }
+}
 
 
- .sidebar li {
-    font-family:OswaldLight,"Trebuchet MS",Tahoma,Helvetica,sans-serif;
-    font-size:16px;
-    color:#4D4D4D;
-    list-style:none;
- 
-  }
+.sidebar li {
+  font-family:OswaldLight,"Trebuchet MS",Tahoma,Helvetica,sans-serif;
+  font-size:16px;
+  color:#4D4D4D;
+  list-style:none;
   
+}
 
 
-   
+
+
 .sidebar a {
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    -ms-transition: 0.3s;
-    transition: 0.3s;
- }
-   
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  -ms-transition: 0.3s;
+  transition: 0.3s;
+}
+
 li.top-menu a:hover {
  color:#A2E0D1;
- }
- 
+}
+
 .top-visited a {
-color:#A2E0D1;
- }
+  color:#A2E0D1;
+}
 
 .sub-menu a:hover {
-color: #C2282E;
- }   
+  color: #C2282E;
+}   
 .sub-menu a:active {
-color: #C2282E;
- } 
- 
- li.visited a {
+  color: #C2282E;
+} 
+
+li.visited a {
  color:#C2282E;
  
-  }   
-   
-  .sub-menu {
-   padding-left:20px;
-   
-    }
- .caption {
+}   
+
+.sub-menu {
+ padding-left:20px;
+ 
+}
+.caption {
  padding-bottom:30px;
  font-family:OswaldLight,"Trebuchet MS",Tahoma,Helvetica,sans-serif;
  font-size:13px;
  color:#4D4D4D;
-  }  
+}  
 
 /*footer*/
 
@@ -304,34 +302,34 @@ color: #C2282E;
 	height:250px;
 	margin-top: 0px;
 
-    
+  
 }
 
 
 .footer-menu {
 	text-align: center;
 	margin-top: 0px;
-    padding-top:100px;
+  padding-top:100px;
   
 }
 
 .footer-menu li {
 	display: inline;
-    
+  
 }
 .footer-menu li  img{
 	width: 40px;
 	height: 40px;
-    
+  
 }
 
+
+#footer p {
+ text-align: center;
+ color:#E6E6E6;
+ padding-top:30px;
  
- #footer p {
-   text-align: center;
-   color:#E6E6E6;
-   padding-top:30px;
-  
-  }
+}
 
 .float-shadow {
   display: inline-block;
